--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -88,7 +88,7 @@ const currentPath = pathname.slice(1)
             animation:
                 var(--animation-fade-in) forwards,
                 var(--animation-slide-out-left) forwards;
-            animation-timing-function: var(--ease-in-3);
+            animation-timing-function: var(--ease-in);
             animation-duration: 0.25s;
         }
 
@@ -96,7 +96,7 @@ const currentPath = pathname.slice(1)
             animation:
                 var(--animation-fade-out) forwards,
                 var(--animation-slide-out-right);
-            animation-timing-function: var(--ease-elastic-out-3);
+            animation-timing-function: var(--ease-in--ease-elastic-out);
             animation-duration: 0.5s;
         }
 
