--- a/src/scss/base/_page.scss
+++ b/src/scss/base/_page.scss
@@ -12,7 +12,7 @@
     background-attachment: fixed;
     color: hsl(var(--clr-white));
     font-family: var(--ff-sans-cond);
-    font-size: var(--fs-400);
+    font-size: var(--fs-fluid-400);
     font-weight: var(--fw-regular);
 
     /* stylelint-disable-next-line number-max-precision */
