Set first images to loading eager

--- a/src/components/CrewSlider.astro
+++ b/src/components/CrewSlider.astro
@@ -23,6 +23,7 @@ import { Image } from 'astro:assets'
                     src="/crew/resize/image-douglas-hurley.webp"
                     width={514}
                     height={700}
+                    loading="eager"
                     alt="Douglas Hurley in a blue space suit triumphantly raises his fist, celebrating a successful mission."
                 />
             </figure>
