--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -68,7 +68,7 @@ const currentPath = pathname.slice(1)
 </nav>
 
 <style lang="scss">
-    @use 'src/scss/functions/fluid' as *;
+    @use '@styles/functions/fluid' as *;
 
     nav {
         grid-row: 1;
