--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,24 +1,12 @@
 ---
+import { Icon } from 'astro-icon/components'
 import Navigation from './Navigation.astro'
 ---
 
 <header>
     <div class="logo">
         <a href="/">
-            <svg
-                aria-hidden="true"
-                focusable="false"
-                xmlns="http://www.w3.org/2000/svg"
-                width="1em"
-                height="1em"
-                viewBox="0 0 48 48"
-                ><g fill="none" fill-rule="evenodd"
-                    ><circle cx="24" cy="24" r="24" fill="#FFF"></circle><path
-                        fill="#0B0D17"
-                        d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"
-                    ></path></g
-                ></svg
-            >
+            <Icon name="logo" size={48} />
             <span class="sr-only">Back to homepage</span>
         </a>
     </div>
@@ -27,7 +15,7 @@ import Navigation from './Navigation.astro'
 </header>
 
 <style lang="scss">
-    @use 'src/scss/functions/fluid' as *;
+    @use '@styles/functions/fluid' as *;
 
     header {
         --_logo-space: calc(var(--site-spacing) + var(--logo-size));
@@ -83,8 +71,11 @@ import Navigation from './Navigation.astro'
 
         > a {
             display: grid;
-            font-size: var(--logo-size);
-            line-height: 1;
+
+            > svg {
+                block-size: var(--logo-size);
+                inline-size: var(--logo-size);
+            }
         }
     }
 </style>
