--- a/src/components/SimpleHeader.astro
+++ b/src/components/SimpleHeader.astro
@@ -1,4 +1,6 @@
 ---
+import { Icon } from 'astro-icon/components'
+
 interface Props {
     title?: string
 }
@@ -9,19 +11,7 @@ const { title } = Astro.props
 <header class="lane">
     <div class="flex">
         <a href="/" class="logo">
-            <svg
-                aria-hidden="true"
-                focusable="false"
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                ><g fill="none" fill-rule="evenodd"
-                    ><circle cx="24" cy="24" r="24" fill="#FFF"></circle><path
-                        fill="#0B0D17"
-                        d="M24 0c0 16-8 24-24 24 15.718.114 23.718 8.114 24 24 0-16 8-24 24-24-16 0-24-8-24-24z"
-                    ></path></g
-                ></svg
-            >
+            <Icon name="logo" size={48} />
             <span class="sr-only">Back to homepage</span>
         </a>
         <h1 class="fs-450 uppercase letter-spacing-1">{title}</h1>
