--- a/src/pages/technology.astro
+++ b/src/pages/technology.astro
@@ -1,11 +1,12 @@
 ---
+import NumberedTitle from '@/components/NumberedTitle.astro'
 import Main from '@components/Main.astro'
 import Layout from '@layouts/Layout.astro'
 ---
 
 <Layout title="Space Tourism | Technology" className="technology">
     <Main>
-        <h1 class="numbered-title"><span aria-hidden="true">03</span> SPACE LAUNCH 101</h1>
+        <NumberedTitle tag="h1" number="03">Space Launch 101</NumberedTitle>
     </Main>
 </Layout>
 
