temp safari fix crew slider

--- a/src/pages/crew.astro
+++ b/src/pages/crew.astro
@@ -1,6 +1,6 @@
 ---
+import CrewSliderSafariFix from '@/components/CrewSliderSafariFix.astro'
 import NumberedTitle from '@/components/NumberedTitle.astro'
-import CrewSlider from '@components/CrewSlider.astro'
 import Main from '@components/Main.astro'
 import Layout from '@layouts/Layout.astro'
 ---
@@ -9,7 +9,7 @@ import Layout from '@layouts/Layout.astro'
     <Main>
         <NumberedTitle tag="h1" number="02">Meet your crew</NumberedTitle>
 
-        <CrewSlider />
+        <CrewSliderSafariFix />
     </Main>
 </Layout>
 
