--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -4,6 +4,6 @@ import Header from './Header.astro'
 
 <Header />
 
-<main class="grid-layout" transition:animate="slide">
+<main class="grid-layout">
     <slot />
 </main>
