--- a/src/components/Tabs/TabsList.astro
+++ b/src/components/Tabs/TabsList.astro
@@ -11,6 +11,7 @@
 
         position: relative;
         grid-area: tablist;
+        align-self: self-end;
         z-index: 1;
 
         &::after {
