--- a/src/scss/props/_custom-props.scss
+++ b/src/scss/props/_custom-props.scss
@@ -16,6 +16,7 @@
     --fs-fluid-600: #{fluid(16px, 32px, 600px)};
     --fs-fluid-500: #{fluid(16px, 28px, 600px)};
     --fs-fluid-400: #{fluid(15px, 18px, 600px)};
+    --fs-fluid-300: #{fluid(14px, 16px, 600px)};
     --fs-500: 1.75rem;
     --fs-400: 1.125rem;
     --fs-300: 1rem;
